--- a/aula 1/index.html
+++ b/aula 1/index.html
@@ -13,11 +13,39 @@
      <div class="box"></div>
      <div class="box"></div>
      <div class="box"></div>
+     <div class="box"></div>
+     <div class="box"></div>
+     <div class="box"></div>
     </div>
 
-    <div class="column">
-        <div class 
 
+  
+    <div class="row">
+     <div class="box"></div>
+     <div class="box"></div>
+     <div class="box"></div>
+     <div class="box"></div>
+     <div class="box"></div>
+     <div class="box"></div>
+    </div>
+
+  
+    <div class="row">
+     <div class="box"></div>
+     <div class="box"></div>
+     <div class="box"></div>
+     <div class="box"></div>
+     
+    </div>
+
+
+  
+    <div class="row">
+     <div class="box"></div>
+     <div class="box"></div>
+     <div class="box"></div>
+     <div class="box"></div>
+     
     </div>
 </body>
 </html>
