--- a/projeto01/index.html
+++ b/projeto01/index.html
@@ -6,27 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> aula 01</title>
-    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="flex-style.css">
+    <link rel="stylesheet" href="flex.css">
+    <script src="index.js"> </script>
 </head>
 
 <body>
 
-    <header>
-        <span class="material-symbols-outlined">
+    <header class="flex-row content-space-between box">
+        <span class="material-symbols-outlined" onclick="mostrarhome()">
             home
         </span>
-        <span class="material-symbols-outlined">
-         Projeto01
-        </span>
+        <h1>
+            Projeto 01
+        </h1>
         <span class="material-symbols-outlined">
             manage_accounts
-                </span>
-         </span>
-        </header>
-        
-        
-    </body>
+        </span>
+    </header>
+
+    <div class="conteudo grow">
+        <div id="home" class="flex-col content-left space-20 box flex-style fit-width escondido">
+            <div><span class="material-symbols-outlined"> home </span> Home</div>
+            <div><span class="material-symbols-outlined"> pending_actions </span>Tarefas</div>
+            <div><span class="material-symbols-outlined"> settings </span>Configurações</div>
+            <div><span class="material-symbols-outlined"> logout </span> Sair</div>
+        </div>
+    </div>
+
+    <footer class="flex-row content-center space-20 box">
+        Ana 2023
+    </footer>
+</body>
 
 </html>
