--- a/projeto01/index.html
+++ b/projeto01/index.html
@@ -8,35 +8,44 @@
     <title> aula 01</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="flex-style.css">
     <link rel="stylesheet" href="flex.css">
+    <link rel="stylesheet" href="index.css">
     <script src="index.js"> </script>
 </head>
 
 <body>
 
-    <header class="flex-row content-space-between box">
-        <span class="material-symbols-outlined" onclick="mostrarhome()">
-            home
-        </span>
-        <h1>
-            Projeto 01
-        </h1>
-        <span class="material-symbols-outlined">
-            manage_accounts
-        </span>
+    <header class="flex-row content-vcenter space-15 content-space-between box">
+        <div class="flex-row content-vcenter gap-15">
+            <span  class="material-symbols-outlined" onclick="mostrarMenu()">
+                density_medium
+            </span>
+            <h2>
+                OPENTECA
+            </h2>
+        </div>
+        <div>
+            <div class="flex-row content-vcenter gap-15">
+            <div><span class="material-symbols-outlined"> 
+                search 
+            </span></div>
+           <div> <span class="material-symbols-outlined">
+                person_2
+            </span></div>
+        </div>
+    </div>
     </header>
 
     <div class="conteudo grow">
-        <div id="home" class="flex-col content-left space-20 box flex-style fit-width escondido">
+        <div id="menu" class="flex-col content-left space-20 box flex-style fit-width escondido">
             <div><span class="material-symbols-outlined"> home </span> Home</div>
-            <div><span class="material-symbols-outlined"> pending_actions </span>Tarefas</div>
-            <div><span class="material-symbols-outlined"> settings </span>Configurações</div>
-            <div><span class="material-symbols-outlined"> logout </span> Sair</div>
+            <div><span class="material-symbols-outlined"> menu_book </span> Livros </div>
+            <div> <span class="material-symbols-outlined">edit</span> Autores</div>
+            <div><span class="material-symbols-outlined"> signpost</span> Gêneros</div>
         </div>
     </div>
-
+    
     <footer class="flex-row content-center space-20 box">
         Ana 2023
     </footer>
