--- a/banner/index.html
+++ b/banner/index.html
@@ -5,23 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="flex-style.css">
+    <link rel="stylesheet" href="flex.css">
+    <link rel="stylesheet" href="index.css">
+    <script src="index.js"> </script>
     <title>B.S carros</title>
 </head>
 
 <body>
-    <header class="flex-row content-vcenter space-15 content-space-between box">
+    <header id="cabecalho" class="flex-row space-30 content-space-between gap-15">
+        <img id="logo" scr=".logo.zip" alt="">
 
-        <div class="flex-row content-vcenter gap-15">
-            <h2>
-                B.S carros
-            </h2>
-           <h4> seção 1</h4>
-        </div>
+        <nav id="menu" class="flex-row gap-15">
+            <a href="">Seção 01</a>
+            <a href="">Seção 02</a>
+            <a href="">Seção 03</a>
+            <a href="">Seção 04</a>
+        </nav>
 
-        
+    </header>
 
-         <img src="banner carros.png" alt="image" height="500" width="1590">
+
+    <img src="banner carros.png" alt="image" height="600" width="1466">
 
 </body>
 
