--- a/banner/index.html
+++ b/banner/index.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-    <header id="cabecalho" class="flex-row space-30 content-space-between gap-15">
-        <img id="logo" scr=".logo.zip" alt="">
+    <header id="cabecalho" class="flex-row  content-space-between gap-15">
+        <img id="logo" src="logo.png" alt="">
 
         <nav id="menu" class="flex-row gap-15">
             <a href="">Seção 01</a>
@@ -29,6 +29,14 @@
 
 
     <img src="banner carros.png" alt="image" height="600" width="1466">
+
+    <div class="flex-row gap-40 content-space-between">
+        <div class="box"> <img src="brasilia.jpg" class="" alt="img" height="200" width="200"> </div>
+        <h5>Brasília Standard 1978 </h5>
+        <div class="box"> <img src="fusca.webp" class="" alt="img" height="200" width="200"> </div>
+        <h5>Fusca 1300 </h5>
+        <div class="box"> <img src="monza tubarao.jpg" class="" alt="img" height="200" width="200"> </div>
+        <h5>Monza tubarão 1992 </h5>
 
 </body>
 
