--- a/banner/index.html
+++ b/banner/index.html
@@ -28,15 +28,27 @@
     </header>
 
 
-    <img src="banner carros.png" alt="image" height="600" width="1466">
+    <img src="banner carros.png" alt="image" height="600" width="1450">
 
     <div class="flex-row gap-40 content-space-between">
-        <div class="box"> <img src="brasilia.jpg" class="" alt="img" height="200" width="200"> </div>
-        <h5>Brasília Standard 1978 </h5>
-        <div class="box"> <img src="fusca.webp" class="" alt="img" height="200" width="200"> </div>
-        <h5>Fusca 1300 </h5>
-        <div class="box"> <img src="monza tubarao.jpg" class="" alt="img" height="200" width="200"> </div>
-        <h5>Monza tubarão 1992 </h5>
+        <div class="box"> <img src="brasilia.jpg" class="" alt="img" height="200" width="300">
+            <h5>Brasília Standard 1978 </h5>
+        </div>
+        <div class="box"> <img src="fusca.webp" class="" alt="img" height="200" width="300">
+            <h5>Fusca 1300 </h5>
+        </div>
+        <div class="box"> <img src="monza tubarao.jpg" class="" alt="img" height="200" width="300">
+            <h5>Monza tubarão 1992 </h5>
+        </div>
+
+
+
+        <div class="container ">
+            <div class="row">
+                <div class="col align-self-start">
+                   abcdefg
+                </div>
+            </div>
 
 </body>
 
