--- a/banner/index.html
+++ b/banner/index.html
@@ -28,7 +28,15 @@
     </header>
 
 
+
     <img src="banner carros.png" alt="image" height="600" width="1450">
+   <br>
+    <div>
+        <h3>
+            Cuidado! Esses veiculos vai te deixar apaixonado 
+        </h3>
+    </div>
+</br>
 
     <div class="flex-row gap-40 content-space-between">
         <div class="box"> <img src="brasilia.jpg" class="" alt="img" height="200" width="300">
@@ -42,13 +50,26 @@
         </div>
 
 
+    </div>
 
-        <div class="container ">
-            <div class="row">
-                <div class="col align-self-start">
-                   abcdefg
+    <br>
+    <div class="flex-row gap-40 content-space-between">
+        <div class="flex-row">
+            <div class="col align-self-start">
+                <img src="accord 2000.avif" class="" alt="img" height="200" width="300">
+                One of three columns
+            </div>
+
+            <div class="flex-row gap-40 content-space-between">
+                <div class="col align-self-start"> <img src="chevette tubarao.webp" class="" alt="img" height="200" width="400">
+                    One of three columns
+                </div>
+                
                 </div>
             </div>
+       
+</br>
+
 
 </body>
 
