--- a/banner/index.html
+++ b/banner/index.html
@@ -27,48 +27,45 @@
 
     </header>
 
-
-
     <img src="banner carros.png" alt="image" height="600" width="1450">
-   <br>
-    <div>
-        <h3>
-            Cuidado! Esses veiculos vai te deixar apaixonado 
-        </h3>
+    <br>
+    <div class="flex-row content-center">
+        <h2> Os melhores carros para você!</h2>
+
     </div>
-</br>
+    </br>
 
     <div class="flex-row gap-40 content-space-between">
-        <div class="box"> <img src="brasilia.jpg" class="" alt="img" height="200" width="300">
+        <div class="flex-row "> <img src="brasilia.jpg" class="" alt="img" height="200" width="300">
             <h5>Brasília Standard 1978 </h5>
         </div>
-        <div class="box"> <img src="fusca.webp" class="" alt="img" height="200" width="300">
+        <div class="flex-row "> <img src="fusca.webp" class="" alt="img" height="200" width="300">
             <h5>Fusca 1300 </h5>
         </div>
-        <div class="box"> <img src="monza tubarao.jpg" class="" alt="img" height="200" width="300">
+        <div class="flex-row "> <img src="monza tubarao.jpg" class="" alt="img" height="200" width="300">
             <h5>Monza tubarão 1992 </h5>
         </div>
 
 
     </div>
-
     <br>
-    <div class="flex-row gap-40 content-space-between">
-        <div class="flex-row">
-            <div class="col align-self-start">
-                <img src="accord 2000.avif" class="" alt="img" height="200" width="300">
-                One of three columns
-            </div>
+    <br>
+    <br>
+    <br>
+    <div class="flex-row content-center gap-40"> <img src="accord 2000.avif" class="" alt="img" height="200"
+            width="300">
+        <h5> Honda accord 2000 </h5>
 
-            <div class="flex-row gap-40 content-space-between">
-                <div class="col align-self-start"> <img src="chevette tubarao.webp" class="" alt="img" height="200" width="400">
-                    One of three columns
-                </div>
-                
-                </div>
-            </div>
-       
-</br>
+
+        <img src="chevette tubarao.webp" class="" alt="img" height="200" width="300">
+        <h5> Chevette tubarão 1980</h5>
+    </div>
+
+
+    </br>
+    <footer id="app-footer" class="flex-row content-center space-20 box">
+        B.S Carros
+    </footer>
 
 
 </body>
